--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,33 @@
-<html>
-    <head>
-        <title>Engineering drawing cv</title>
-    </head>
-    <body>
-        <div>
-            Engineering drawing cv:
-            <a href="{{ url_for('index') }}">Home</a>
-            <a href="{{ url_for('upload') }}">Upload image</a>
+{% extends 'bootstrap/base.html' %}
+
+{% block title %}
+    Engineering drawing cv
+{% endblock %}
+
+{% block navbar %}
+    <nav class="navbar navbar-default">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="{{ url_for('index') }}">Engineering drawing cv</a>
+            </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li><a href="{{ url_for('index') }}">Home</a></li>
+                    <li><a href="{{ url_for('upload') }}">Upload image</a></li>
+                </ul>
+            </div>
         </div>
-        {% block content %}{% endblock %}
-    </body>
-</html>
+    </nav>
+{% endblock %}
+
+{% block content %}
+    <div class="container">
+        {% block app_content %}{% endblock %}
+    </div>
+{% endblock %}
