--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block content %}
+{% block app_content %}
     <form method=POST enctype=multipart/form-data action="{{ url_for('upload') }}">
         <input type=file name=photo autocomplete="off" required>
         <input type="submit" value="Submit">
