--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,6 +20,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="{{ url_for('index') }}">Home</a></li>
                     <li><a href="{{ url_for('upload') }}">Upload image</a></li>
+                    <li><a href="{{ url_for('process') }}">Process image</a></li>
                 </ul>
             </div>
         </div>
