--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -1,9 +1,14 @@
 {% extends "base.html" %}
 
 {% block app_content %}
-    <form method=POST enctype=multipart/form-data action="{{ url_for('upload') }}">
-        <input type=file name=photo autocomplete="off" required>
-        <input type="submit" value="Submit">
-    </form>
+    <div>
+        <p>
+            Upload an image of a P&ID on which you want to identify senors.
+        </p>
+        <form method=POST enctype=multipart/form-data action="{{ url_for('upload') }}">
+            <input type=file name=photo autocomplete="off" required>
+            <input type="submit" value="Upload image">
+        </form>
+    </div>
 {% endblock %}
 
