Use blueprints and app factory.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,13 +14,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{{ url_for('index') }}">Engineering drawing cv</a>
+                <a class="navbar-brand" href="{{ url_for('index.index') }}">Engineering drawing cv</a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a href="{{ url_for('index') }}">Home</a></li>
-                    <li><a href="{{ url_for('upload') }}">Upload image</a></li>
-                    <li><a href="{{ url_for('process') }}">Process image</a></li>
+                    <li><a href="{{ url_for('index.index') }}">Home</a></li>
+                    <li><a href="{{ url_for('upload.upload') }}">Upload image</a></li>
+                    <li><a href="{{ url_for('process.process') }}">Process image</a></li>
                 </ul>
             </div>
         </div>
