--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -5,7 +5,7 @@
         <p>
             Upload an image of a P&ID on which you want to identify senors.
         </p>
-        <form method=POST enctype=multipart/form-data action="{{ url_for('upload') }}">
+        <form method=POST enctype=multipart/form-data action="{{ url_for('upload.upload') }}">
             <input type=file name=photo autocomplete="off" required>
             <input type="submit" value="Upload image">
         </form>
