--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,5 +30,17 @@
 {% block content %}
     <div class="container">
         {% block app_content %}{% endblock %}
+
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        <!-- Categories: success (green), info (blue), warning (yellow), danger (red) -->
+        {% if messages %}
+            {% for category, message in messages %}
+            <div class="alert alert-{{ category }} alert-dismissible" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <!-- <strong>Title</strong> --> {{ message }}
+            </div>
+            {% endfor %}
+        {% endif %}
+        {% endwith %}
     </div>
 {% endblock %}
