Visual minor changes.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,9 +1,8 @@
 {% extends "base.html" %}
 
 {% block app_content %}
-<div>
-    <p>
-        This is a sample app to demonstrate the use of computer vision to identify sensors on technical engineering drawing.
-    </p>
+<div class="well">
+    This is a sample app to demonstrate the use of computer vision to identify sensors on technical engineering drawing.
 </div>
+
 {% endblock %}
