--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,48 +1,50 @@
 {% extends 'bootstrap/base.html' %}
 
 {% block title %}
-    Engineering drawing cv
+Engineering drawing cv
 {% endblock %}
 
 {% block navbar %}
-    <nav class="navbar navbar-inverse">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="{{ url_for('index.index') }}">Engineering drawing cv</a>
-            </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li><a href="{{ url_for('index.index') }}">Home</a></li>
-                    <li><a href="{{ url_for('upload.upload') }}">Upload image</a></li>
-                    <li><a href="{{ url_for('process.process') }}">Process image</a></li>
-                </ul>
-            </div>
+<nav class="navbar navbar-inverse">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="{{ url_for('index.index') }}">Engineering drawing cv</a>
         </div>
-    </nav>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li><a href="{{ url_for('index.index') }}">Home</a></li>
+                <li><a href="{{ url_for('upload.upload') }}">Upload image</a></li>
+                <li><a href="{{ url_for('process.process') }}">Process image</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
 {% endblock %}
 
 {% block content %}
-    <div class="container">
-        {% block app_content %}{% endblock %}
-        
-        <hr class="my-4">
-
-        {% with messages = get_flashed_messages(with_categories=true) %}
-        <!-- Categories: success (green), info (blue), warning (yellow), danger (red) -->
-        {% if messages %}
-            {% for category, message in messages %}
-            <div class="alert alert-{{ category }} alert-dismissible" role="alert">
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <!-- <strong>Title</strong> --> {{ message }}
-            </div>
-            {% endfor %}
-        {% endif %}
-        {% endwith %}
+<div class="container">
+    {% block page_title %}{% endblock %}
+    <hr class="my-4">
+    {% block app_content %}{% endblock %}
+    <hr class="my-4">
+    {% with messages = get_flashed_messages(with_categories=true) %}
+    <!-- Categories: success (green), info (blue), warning (yellow), danger (red) -->
+    {% if messages %}
+    {% for category, message in messages %}
+    <div class="alert alert-{{ category }} alert-dismissible" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
+                aria-hidden="true">&times;</span></button>
+        <!-- <strong>Title</strong> --> {{ message }}
     </div>
+    {% endfor %}
+    {% endif %}
+    {% endwith %}
+</div>
 {% endblock %}
