--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,8 +1,13 @@
 {% extends "base.html" %}
 
+{% block page_title %}
+<h3>
+    Home
+</h3>
+{% endblock %}
+
 {% block app_content %}
 <div class="well">
     This is a sample app to demonstrate the use of computer vision to identify sensors on technical engineering drawing.
 </div>
-
 {% endblock %}
