Deleted unused stuff

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,6 +8,6 @@
 
 {% block app_content %}
 <div class="well">
-    This is a sample app to demonstrate the use of computer vision to identify sensors on technical engineering drawing.
+    Create your own heat map based on your Strava activities.
 </div>
 {% endblock %}
