--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,7 +1,7 @@
 {% extends 'bootstrap/base.html' %}
 
 {% block title %}
-Engineering drawing cv
+Strava heat map
 {% endblock %}
 
 {% block navbar %}
@@ -15,13 +15,11 @@ Engineering drawing cv
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{ url_for('index.index') }}">Engineering drawing cv</a>
+            <a class="navbar-brand" href="{{ url_for('index.index') }}">Strava heat map</a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li><a href="{{ url_for('index.index') }}">Home</a></li>
-                <li><a href="{{ url_for('upload.upload') }}">Upload image</a></li>
-                <li><a href="{{ url_for('process.process') }}">Process image</a></li>
             </ul>
         </div>
     </div>
