Added login functionality from stravalib

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block app_content %}
-<div class="well">
+<div class="jumbotron">
     Create your own heat map based on your Strava activities.
 </div>
 {% endblock %}
