--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,6 +20,7 @@ Strava heat map
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li><a href="{{ url_for('index.index') }}">Home</a></li>
+                <li><a href="{{ url_for('oauth.login') }}">Login</a></li>
             </ul>
         </div>
     </div>
