--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,6 +7,7 @@ Strava heat map
 {% block navbar %}
 <nav class="navbar navbar-inverse">
     <div class="container">
+        <a class="navbar-right" href="#"><img src="/static/api_logo_pwrdBy_strava_stack_white.png" alt=""></a>
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
                 data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -15,9 +16,9 @@ Strava heat map
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{ url_for('index.index') }}">Strava heat map</a>
+            <a class="navbar-brand" href="{{ url_for('index.index') }}">Strava heatmaps</a>
         </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="nav navbar-nav">
                 <li><a href="{{ url_for('index.index') }}">Home</a></li>
                 <li><a href="{{ url_for('oauth.login') }}">Login</a></li>
