--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,7 +5,7 @@
         <nav class="nav nav-masthead justify-content-center">
           <a class="nav-link active" href="#">Home</a>
           <a class="nav-link" href="#">Tutorial</a>
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link" href="{{ url_for('contact.contact') }}">Contact</a>
         </nav>
       </div>
     </header>
