--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,7 +5,8 @@
   <h1 class="cover-heading">Strava heatmap.</h1>
   <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
   <p class="lead">
-    <a href="{{ url_for('heatmap.heatmap') }}" class="btn btn-lg btn-secondary">View map</a>
+    <a href="{{ url_for('heatmap.heatmap') }}" class="btn btn btn-secondary">View map</a>
+    <a href="https://github.com/rafaelschlatter/strava-heatmap" class="btn btn btn-primary"><span class="fa fa-github"></span> View source</a>
   </p>
 </main>
 {% endblock %}
