Corrected path when saving html map.

--- a/app/templates/heatmap.html
+++ b/app/templates/heatmap.html
@@ -23,7 +23,7 @@
             <meta name="viewport" content="width=device-width,
                 initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
             <style>
-                #map_660ca9f1f8fe435db7296fee5b11df27 {
+                #map_e22983f7c3f34b20ace79681e6c69fc4 {
                     position: relative;
                     width: 100.0%;
                     height: 100.0%;
@@ -35,7 +35,7 @@
 </head>
 <body>    
     
-            <div class="folium-map" id="map_660ca9f1f8fe435db7296fee5b11df27" ></div>
+            <div class="folium-map" id="map_e22983f7c3f34b20ace79681e6c69fc4" ></div>
         
     
 <!doctype html>
@@ -52,26 +52,26 @@
 </body>
 <script>    
     
-            var map_660ca9f1f8fe435db7296fee5b11df27 = L.map(
-                "map_660ca9f1f8fe435db7296fee5b11df27",
+            var map_e22983f7c3f34b20ace79681e6c69fc4 = L.map(
+                "map_e22983f7c3f34b20ace79681e6c69fc4",
                 {
                     center: [61.91, 10.76],
                     crs: L.CRS.EPSG3857,
                     zoom: 5.3,
                     zoomControl: true,
                     preferCanvas: false,
-                    name: "L\u00f8nn i Norge",
+                    name: "Strava Heatmap",
                 }
             );
-            L.control.scale().addTo(map_660ca9f1f8fe435db7296fee5b11df27);
+            L.control.scale().addTo(map_e22983f7c3f34b20ace79681e6c69fc4);
 
             
 
         
     
-            var tile_layer_5d871c8431b84cf893cc9aaaa0403816 = L.tileLayer(
+            var tile_layer_6eb15cad398f4d2199db910415f72d7d = L.tileLayer(
                 "https://cartodb-basemaps-{s}.global.ssl.fastly.net/light_all/{z}/{x}/{y}.png",
                 {"attribution": "\u0026copy; \u003ca href=\"http://www.openstreetmap.org/copyright\"\u003eOpenStreetMap\u003c/a\u003e contributors \u0026copy; \u003ca href=\"http://cartodb.com/attributions\"\u003eCartoDB\u003c/a\u003e, CartoDB \u003ca href =\"http://cartodb.com/attributions\"\u003eattributions\u003c/a\u003e", "detectRetina": false, "maxNativeZoom": 18, "maxZoom": 18, "minZoom": 0, "noWrap": false, "opacity": 1, "subdomains": "abc", "tms": false}
-            ).addTo(map_660ca9f1f8fe435db7296fee5b11df27);
+            ).addTo(map_e22983f7c3f34b20ace79681e6c69fc4);
         
 </script>
