--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,8 +2,10 @@
 
 {% block content %}
 <main role="main" class="inner cover">
-  <h1 class="cover-heading">Strava heatmap.</h1>
-  <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+  <h1 class="cover-heading">A personal Strava heatmap.</h1>
+  <p class="lead">Hi, my name is Rafael and I do some sports as a hobby. Mostly &#127939 and &#128692 in summer, and &#127938 in winter.</p>
+  <p class="lead">I use this small website to host my personal activity heatmap, based on my Strava data. Let me know your comments, critics and thoughts in the contact section.</p>
+  <p class="lead">There is a tutorial as well, in case you want to make & host your own. Cya &#128075</p>
   <p class="lead">
     <a href="{{ url_for('heatmap.heatmap') }}" class="btn btn btn-secondary">View map</a>
     <a href="https://github.com/rafaelschlatter/strava-heatmap" class="btn btn btn-primary"><span class="fa fa-github"></span> View source</a>
