Use python 3.7, and added contact form.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,6 +18,7 @@
     {% block content %}{% endblock %}
   
     <footer class="mastfoot mt-auto">
+      {% block flash %}{% endblock %}
       <div class="inner">
         <p>Cover template for <a href="https://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
       </div>
