--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -6,11 +6,11 @@
     <div class="form-group">
       <label for="name">Name</label>
       <input type="text" class="form-control" id="name" name="name" aria-describedby="emailHelp" placeholder="Enter name">
-      <small id="emailHelp" class="form-text text-muted">I never share your email with anyone.</small>
     </div>
     <div class="form-group">
       <label for="email">Email</label>
       <input type="text" class="form-control" id="email" name="email" placeholder="Enter email address.">
+      <small id="emailHelp" class="form-text text-muted">I never share your email with anyone.</small>
     </div>
     <div class="form-group">
       <label for="message">Message</label>
@@ -21,23 +21,17 @@
 {% endblock %}
 
 {% block flash %}
-  <div id="bottom">
-  {% with messages = get_flashed_messages(with_categories=true) %}
-      {% if messages %}
-  {% for message in messages %}
-      {% if "Error" not in message[1]: %}
-          <div class="alert alert-info">
-          <strong>Success! </strong> {{ message[1] }}
-          </div>
-      {% endif %}
 
-      {% if "Error" in message[1]: %}
-          <div class="alert alert-danger">
-          <strong>Error: </strong> {{ message[1] }}
-          </div>
-      {% endif %}
-  {% endfor %}
-      {% endif %}
-  {% endwith %}
-  </div>
+{% with messages = get_flashed_messages(with_categories=true) %}
+  <!-- Categories: success (green), info (blue), warning (yellow), danger (red) -->
+  {% if messages %}
+    {% for category, message in messages %}
+      <div class="alert alert-{{ category }} alert-dismissible" role="alert">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      <!-- <strong>Title</strong> --> {{ message }}
+      </div>
+    {% endfor %}
+  {% endif %}
+{% endwith %}
+
 {% endblock %}
