--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,13 +10,31 @@
   <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
     <header class="masthead mb-auto">
       <div class="inner">
-        <a class="navbar-right" href="#"><img src="/static/api_logo_pwrdBy_strava_stack_white.png" alt=""></a>
-        <nav class="nav nav-masthead justify-content-center">
-          <a class="nav-link active" href="{{ url_for('index.index') }}">Home</a>
-          <a class="nav-link" href="{{ url_for('heatmap.heatmap') }}">Map</a>
-          <a class="nav-link" href="#">Tutorial</a>
-          <a class="nav-link" href="{{ url_for('contact.contact') }}">Contact</a>
+        <nav class="navbar navbar-expand-lg navbar-dark style=background-color: transparent;">
+          <a class="navbar-brand" href="#">
+            <img src="/static/api_logo_pwrdBy_strava_stack_white.png" height=35 alt="">
+          </a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="{{ url_for('index.index') }}">Home <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('heatmap.heatmap') }}">Map</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Tutrial</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('contact.contact') }}">Contact</a>
+              </li>
+            </ul>
+          </div>
         </nav>
+        
       </div>
     </header>
 
@@ -29,4 +47,7 @@
       </div>
     </footer>
   </div>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </html>
