trying to fix the none responsive background image

--- a/app/static/styles/cover.css
+++ b/app/static/styles/cover.css
@@ -42,7 +42,7 @@ body {
   background: url('https://stravastatic.blob.core.windows.net/static/Capture_blur.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
-  background-size: cover;
+  background-size: cover, contain;
   -o-background-size: cover;
 }
 
