--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -38,12 +38,14 @@
       </div>
     </header>
 
+
     {% block content %}{% endblock %}
-  
+
+
     <footer class="mastfoot mt-auto">
       {% block flash %}{% endblock %}
       <div class="inner">
-        <p>Cover template for <a href="https://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+        <small>Cover template for <a href="https://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</>
       </div>
     </footer>
   </div>
