--- a/app/static/styles/cover.css
+++ b/app/static/styles/cover.css
@@ -39,9 +39,10 @@ body {
 
 body {
   background-image: url('https://stravastatic.blob.core.windows.net/static/Capture_blur.jpg');
-  background-size: cover, contain;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
   background-attachment: fixed;
-  overflow-y: scroll;
 }
 
 .cover-container {
