--- a/app/static/styles/cover.css
+++ b/app/static/styles/cover.css
@@ -28,6 +28,9 @@ html,
 body {
   height: 100%;
   min-height: 100%;
+  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
 }
 
 body {
@@ -54,11 +57,14 @@ body {
  * Header
  */
 .masthead {
-  margin-bottom: 2rem;
-}
-
-.masthead-brand {
-  margin-bottom: 0;
+  background-color:rgba(60, 60, 60, .75);
+  margin-top: 0rem;
+  margin-left: -9999rem;
+  margin-right: -9999rem;
+  /* add back negative margin value */
+  padding-top: 0rem;
+  padding-left: 9999rem;
+  padding-right: 9999rem;
 }
 
 .nav-masthead .nav-link {
@@ -96,9 +102,6 @@ body {
 /*
  * Cover
  */
-.cover {
-  padding: 0 1.5rem;
-}
 .cover .btn-lg {
   padding: .75rem 1.25rem;
   font-weight: 700;
@@ -108,6 +111,14 @@ body {
 /*
  * Footer
  */
-.mastfoot {
+ .mastfoot {
   color: rgba(255, 255, 255, .5);
+  background-color: rgba(60, 60, 60, .75);
+  margin-bottom: 0rem;
+  margin-left: -9999rem;
+  margin-right: -9999rem;
+  /* add back negative margin value */
+  padding-bottom: 0rem;
+  padding-left: 9999rem;
+  padding-right: 9999rem;
 }
