--- a/app/static/styles/custom.css
+++ b/app/static/styles/custom.css
@@ -1,6 +1,5 @@
-html {
-  position: relative;
-  min-height: 100%;
+html, body {
+  height: 100%;
 }
 
 body {
@@ -12,9 +11,10 @@ body {
 }
 
 body {
-  margin-bottom: 55px; /* Margin bottom by footer height */
   color: #fff;
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
+  display: flex;
+  flex-flow: column;
 }
 
 .masthead {
@@ -22,9 +22,6 @@ body {
 }
 
 footer{
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 55px; /* Set the fixed height of the footer here */
+  margin-top: auto;
   background-color:rgba(40, 40, 40, .5);
 }
