--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -2,7 +2,11 @@
 
 {% block content %}
 <div class="container">
-  <br/>
+  <a style="display:inline-block;background-color:#FC5200;color:#fff;padding:5px 10px 5px 30px;font-size:11px;font-family:Helvetica, Arial, sans-serif;white-space:nowrap;text-decoration:none;background-repeat:no-repeat;background-position:10px center;border-radius:3px;background-image:url('http://badges.strava.com/logo-strava-echelon.png')" href='http://strava.com/athletes/24969674' target="_clean">
+    Follow me on
+    <img src='http://badges.strava.com/logo-strava.png' alt='Strava' style='margin-left:2px;vertical-align:text-bottom' height=13 width=51 />
+  </a>
+  <br>
   <form  action="" method="post" role="form">
     {{ form.csrf }}
     <div class="form-group">
