--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,9 +12,9 @@
 
     <header class="masthead">
       <!-- Fixed navbar -->
-      <nav class="navbar navbar-expand-md navbar-dark style=background-color: transparent;">
+      <nav class="navbar navbar-expand-md navbar-dark">
         <div class="container">
-          <a class="navbar-brand" href="https://www.strava.com/athletes/24969674">
+          <a class="navbar-brand" href="https://www.strava.com/">
             <img src="/static/api_logo_pwrdBy_strava_stack_white.png" height=35 alt="">
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,18 +31,17 @@
               <li class="nav-item">
                 <a class="nav-link disabled" href="#">Tutorial</a>
               </li>
+            </ul>
+            <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('contact.contact') }}">Contact</a>
+                <a href="{{ url_for('contact.contact') }}" class="btn btn-outline-success">Contact me</a>
               </li>
             </ul>
-            <form class="form-inline mt-2 mt-md-0">
-              <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
           </div>
         </div>
       </nav>
     </header>
+    <br>
       
     <!-- Begin page content -->
     <main role="main" class="container">
@@ -53,11 +52,11 @@
 
     <footer class="footer">
       <div class="container">
+        <hr>
         <small class="text">&copy; 2020 Rafael Daniel Schlatter.</small>
-      </div>
-      <div class="container">
         <small class="text-muted">This project is licensed under the terms of the <a href="https://github.com/rafaelschlatter/strava-heatmap/blob/master/LICENSE.txt">MIT license.</a></small>
       </div>
+      <br>
     </footer>
     
 
