--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -6,7 +6,9 @@
     Follow me on
     <img src='http://badges.strava.com/logo-strava.png' alt='Strava' style='margin-left:2px;vertical-align:text-bottom' height=13 width=51 />
   </a>
-  <br>
+</div>
+<br>
+<div class="container">
   <form  action="" method="post" role="form">
     {{ form.csrf }}
     <div class="form-group">
@@ -33,8 +35,8 @@
     </div>						   
     <button type="submit" class="btn btn-success">Submit</button>
   </form>
-  <br/>
 </div>
+<br>
 {% endblock %}
 
 {% block flash %}
