--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="jumbotron">
+<div class="jumbotron jumbotron-fluid">
   <h1 class="cover-heading">A personal activity heatmap.</h1>
   <p class="lead">Hi, my name is Rafael and I do some sports as a hobby. Mostly &#127939 and &#128692 in summer, and &#127938 in winter.</p>
-  <hr>
+  <hr class="my-hr">
   <p class="my-4">I use this small website to host my personal activity heatmap, based on my Strava data. 
     I like to code, so natuarlly I prefer to make this myself rather than paying for Strava's premium feature &#128513
     Let me know your comments, critics and thoughts in the contact section. Feel free to open a pull request
