--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -34,7 +34,7 @@
             </ul>
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a href="{{ url_for('contact.contact') }}" class="btn btn-outline-success">Contact me</a>
+                <a href="{{ url_for('contact.contact') }}" class="btn btn-outline-light">Contact me</a>
               </li>
             </ul>
           </div>
@@ -50,10 +50,11 @@
     </main>
 
     <footer class="footer">
-      <div class="container">
-        <hr>
-        <small class="text">&copy; 2020 Rafael Daniel Schlatter.</small>
-        <small class="text-muted">This project is licensed under the terms of the <a href="https://github.com/rafaelschlatter/strava-heatmap/blob/master/LICENSE.txt">MIT license.</a></small>
+      <br>
+      <div class="container d-flex">
+        <small class="mr-auto p-2 text-muted">&copy; 2020 Rafael Daniel Schlatter. Licensed under the terms of the <a href="https://github.com/rafaelschlatter/strava-heatmap/blob/master/LICENSE.txt">MIT license.</a></small>
+        <small class="p-2 text-muted"><a href="https://github.com/rafaelschlatter"><i class="fa fa-github fa-lg" style="color:#91979e;" title="GitHub"></i></a></small>
+        <small class="p-2 text-muted"><a href="https://www.linkedin.com/in/rafaelschlatter/"><i class="fa fa-linkedin fa-lg" style="color:#91979e;" title="LinkedIn"></i></a></small>
       </div>
       <br>
     </footer>
