--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,15 +5,15 @@
   <h1 class="cover-heading">A personal activity heatmap.</h1>
   <p class="lead">Hi, my name is Rafael and I do some sports as a hobby. Mostly &#127939 and &#128692 in summer, and &#127938 in winter.</p>
   <hr class="my-hr">
-  <p class="my-4">I use this small website to host my personal activity heatmap, based on my Strava data. 
-    I like to code, so natuarlly I prefer to make this myself rather than paying for Strava's premium feature &#128513
+  <p class="text-muted">I use this small website to host my <span style="color: #fff">personal activity heatmap</span>, based on my Strava data. 
+    I like to code, so naturally I prefer to make this myself rather than paying for <span style="color: #fff">Strava's premium feature</span> &#128513.
     Let me know your comments, critics and thoughts in the contact section. Feel free to open a pull request
-    or issue on GitHub as well.
+    or issue on <span style="color: #fff">GitHub</span> as well.
   </p>
-  <p class="my-4">There will be a tutorial soon, in case you want to make & host your own heatmap. Cya &#128075</p>
+  <p class="text-muted">There will be a tutorial soon, in case you want to make & host your own heatmap. Cya &#128075</p>
   <p class="lead">
-    <a href="{{ url_for('heatmap.heatmap') }}" class="btn btn btn-secondary">View map</a>
-    <a href="https://github.com/rafaelschlatter/strava-heatmap" class="btn btn btn-primary"><span class="fa fa-github"></span> View source</a>
+    <a href="{{ url_for('heatmap.heatmap') }}" class="btn btn-outline-light">View map</a>
+    <a href="https://github.com/rafaelschlatter/strava-heatmap" class="btn btn-outline-primary"><span class="fa fa-github"></span> View source</a>
   </p>
 </div>
 {% endblock %}
