--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href=https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/e97a1d5899.js" crossorigin="anonymous"></script>
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/custom.css') }}">
   </head>
 
@@ -54,6 +55,7 @@
       <div class="container d-flex">
         <small class="mr-auto p-2 text-muted">&copy; 2020 Rafael Daniel Schlatter. Licensed under the terms of the <a href="https://github.com/rafaelschlatter/strava-heatmap/blob/master/LICENSE.txt">MIT license.</a></small>
         <small class="p-2 text-muted"><a href="https://github.com/rafaelschlatter"><i class="fa fa-github fa-lg" style="color:#91979e;" title="GitHub"></i></a></small>
+        <small class="p-2 text-muted"><a href="https://www.strava.com/athletes/24969674"><i class="fab fa-strava fa-lg" style="color:#91979e;" title="Strava"></i></a></small>
         <small class="p-2 text-muted"><a href="https://www.linkedin.com/in/rafaelschlatter/"><i class="fa fa-linkedin fa-lg" style="color:#91979e;" title="LinkedIn"></i></a></small>
       </div>
       <br>
