--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,8 +12,8 @@
   </p>
   <p class="text-muted">There will be a tutorial soon, in case you want to make & host your own heatmap. Cya &#128075</p>
   <p class="lead">
-    <a href="{{ url_for('heatmap.heatmap') }}" class="btn btn-outline-light">View map</a>
-    <a href="https://github.com/rafaelschlatter/strava-heatmap" class="btn btn-outline-primary"><span class="fa fa-github"></span> View source</a>
+    <a href="{{ url_for('heatmap.heatmap') }}" class="btn btn-primary">View map</a>
+    <a href="https://github.com/rafaelschlatter/strava-heatmap" class="btn btn-secondary"><span class="fa fa-github"></span> View source</a>
   </p>
 </div>
 {% endblock %}
