Deleted old css, center jumbotron.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -33,7 +33,7 @@
                 <a class="nav-link disabled" href="#">Tutorial</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('contact.contact') }}">Contact me</a>
+                <a class="nav-link" href="{{ url_for('contact.contact') }}">Contact</a>
               </li>
             </ul>
             <ul class="navbar-nav ml-auto">
