--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="jumbotron jumbotron-fluid float-md-center">
-  <h1 class="cover-heading">A personal activity heatmap</h1>
-  <p class="lead">Hi, my name is Rafael and I do some sports as a hobby. Mostly &#127939 and &#128692 in summer, and &#127938 in winter.</p>
+<div class="jumbotron jumbotron-fluid text-center">
+  <h1 class="cover-heading mb-3">A personal activity heatmap</h1>
+  <p class="lead mb-4">Hi, my name is Rafael and I do some sports as a hobby. Mostly &#127939 and &#128692 in summer, and &#127938 in winter.</p>
   <hr class="my-hr">
   <p class="lead text-muted">I use this small website to host my <span style="color: #fff">personal activity heatmap</span>, based on my Strava data. 
     I like to code, so naturally I prefer to make this myself rather than paying for <span style="color: #fff">Strava's premium feature</span> &#128513
