Change to small buttons in jumbotron.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,8 +18,8 @@
       </p>
       <br>
       <p>
-        <a href="{{ url_for('heatmap.heatmap') }}" class="btn btn-primary btn-lg">View map</a>
-        <a href="https://github.com/rafaelschlatter/strava-heatmap" class="btn btn-outline-light btn-lg"><span class="fa fa-github"></span> View on GitHub</a>
+        <a href="{{ url_for('heatmap.heatmap') }}" class="btn btn-primary">View map</a>
+        <a href="https://github.com/rafaelschlatter/strava-heatmap" class="btn btn-outline-light"><span class="fa fa-github"></span> View on GitHub</a>
       </p>
     </div>
   </div>
