format python and html.

--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -3,17 +3,19 @@
 {% block content %}
 <br>
 <h2 class="cover-heading">Message me &#128075</h2>
-<p>Feel free to leave any kind of message, comments, critics, improvements. I appreciate all feedback. You can also open pull requests and issues on GitHub.</p>
+<p>Feel free to leave any kind of message, comments, critics, improvements. I appreciate all feedback. You can also open
+  pull requests and issues on GitHub.</p>
 
 <div class="card mb-4 shadow-sm">
   <div class="card-body">
-    <form  action="" method="post" role="form">
+    <form action="" method="post" role="form">
       {{ form.csrf }}
       <div class="form-group">
         <label for="name">Name *</label>
-        <input type="text" class="form-control" id="name" name="name" aria-describedby="emailHelp" placeholder="Enter name">
+        <input type="text" class="form-control" id="name" name="name" aria-describedby="emailHelp"
+          placeholder="Enter name">
         {% for error in form.name.errors %}
-          <small style="color: red;">{{ error }}</small>
+        <small style="color: red;">{{ error }}</small>
         {% endfor %}
       </div>
       <div class="form-group">
@@ -21,29 +23,29 @@
         <input type="text" class="form-control" id="email" name="email" placeholder="Enter email address">
         <small id="emailHelp" class="form-text text-muted">I never share your email with anyone.</small>
         {% for error in form.email.errors %}
-          <small style="color: red;">{{ error }}</small>
+        <small style="color: red;">{{ error }}</small>
         {% endfor %}
       </div>
       <div class="form-group">
         <label for="message">Message *</label>
         <textarea class="form-control" id="message" name="message" rows="3" placeholder="Enter a message"></textarea>
         {% for error in form.message.errors %}
-          <small style="color: red;">{{ error }}</small>
+        <small style="color: red;">{{ error }}</small>
         {% endfor %}
       </div>
       <div class="form-group">
         {{ form.recaptcha }}
         {% for error in form.recaptcha.errors %}
-          <small style="color: red;">{{ error }}</small>
+        <small style="color: red;">{{ error }}</small>
         {% endfor %}
       </div>
-      
+
       <div class="form-group">
-      <button type="submit" class="btn btn-success">Submit</button>
+        <button type="submit" class="btn btn-success">Submit</button>
       </div>
-    
+
       <div class="form-group">
-      <small class ="text-muted">* These fields are required.</small>
+        <small class="text-muted">* These fields are required.</small>
       </div>
     </form>
   </div>
@@ -53,15 +55,16 @@
 {% block flash %}
 
 {% with messages = get_flashed_messages(with_categories=true) %}
-  <!-- Categories: success (green), info (blue), warning (yellow), danger (red) -->
-  {% if messages %}
-    {% for category, message in messages %}
-      <div class="alert alert-{{ category }} alert-dismissible" role="alert">
-      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-      <!-- <strong>Title</strong> --> {{ message }}
-      </div>
-    {% endfor %}
-  {% endif %}
+<!-- Categories: success (green), info (blue), warning (yellow), danger (red) -->
+{% if messages %}
+{% for category, message in messages %}
+<div class="alert alert-{{ category }} alert-dismissible" role="alert">
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
+      aria-hidden="true">&times;</span></button>
+  <!-- <strong>Title</strong> --> {{ message }}
+</div>
+{% endfor %}
+{% endif %}
 {% endwith %}
 
 {% endblock %}
