--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,83 +1,102 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href=https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/e97a1d5899.js" crossorigin="anonymous"></script>
-    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/custom.css') }}">
-  </head>
 
-  <body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link href=https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css rel="stylesheet"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <script src="https://kit.fontawesome.com/e97a1d5899.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/custom.css') }}">
+</head>
 
-    <header class="masthead">
-      <!-- Fixed navbar -->
-      <nav class="navbar navbar-expand-md navbar-dark">
-        <div class="container">
-          <a class="navbar-brand" href="https://www.strava.com/">
-            <img src="/static/api_logo_pwrdBy_strava_stack_white.png" height=35 alt="">
-          </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="{{ url_for('index.index') }}">Home <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('heatmap.heatmap') }}">Map</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" href="#">Tutorial</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Contact
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" href="{{ url_for('contact.contact') }}">Contact me</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="https://github.com/rafaelschlatter">Me on GitHub</a>
-                  <a class="dropdown-item" href="https://www.strava.com/athletes/24969674">Me on Strava</a>
-                  <a class="dropdown-item" href="https://www.linkedin.com/in/rafaelschlatter/">Connect on LinkedIn</a>
-                </div>
-              </li>
-            </ul>
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                <a href="{{ url_for('heatmap.heatmap') }}"><span><svg class="bi bi-map" title="View map" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                  <path fill-rule="evenodd" d="M15.817.613A.5.5 0 0116 1v13a.5.5 0 01-.402.49l-5 1a.502.502 0 01-.196 0L5.5 14.51l-4.902.98A.5.5 0 010 15V2a.5.5 0 01.402-.49l5-1a.5.5 0 01.196 0l4.902.98 4.902-.98a.5.5 0 01.415.103zM10 2.41l-4-.8v11.98l4 .8V2.41zm1 11.98l4-.8V1.61l-4 .8v11.98zm-6-.8V1.61l-4 .8v11.98l4-.8z" clip-rule="evenodd"/>
-                </svg></span></a>
-              </li>
-            </ul>
-          </div>
+<body>
+
+  <header class="masthead">
+    <!-- Fixed navbar -->
+    <nav class="navbar navbar-expand-md navbar-dark">
+      <div class="container">
+        <a class="navbar-brand" href="https://www.strava.com/">
+          <img src="/static/api_logo_pwrdBy_strava_stack_white.png" height=35 alt="">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+          aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="{{ url_for('index.index') }}">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('heatmap.heatmap') }}">Map</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#">Tutorial</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Contact
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <a class="dropdown-item" href="{{ url_for('contact.contact') }}">Contact me</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="https://github.com/rafaelschlatter">Me on GitHub</a>
+                <a class="dropdown-item" href="https://www.strava.com/athletes/24969674">Me on Strava</a>
+                <a class="dropdown-item" href="https://www.linkedin.com/in/rafaelschlatter/">Connect on LinkedIn</a>
+              </div>
+            </li>
+          </ul>
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a href="{{ url_for('heatmap.heatmap') }}"><span><svg class="bi bi-map" title="View map" width="1em"
+                    height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd"
+                      d="M15.817.613A.5.5 0 0116 1v13a.5.5 0 01-.402.49l-5 1a.502.502 0 01-.196 0L5.5 14.51l-4.902.98A.5.5 0 010 15V2a.5.5 0 01.402-.49l5-1a.5.5 0 01.196 0l4.902.98 4.902-.98a.5.5 0 01.415.103zM10 2.41l-4-.8v11.98l4 .8V2.41zm1 11.98l4-.8V1.61l-4 .8v11.98zm-6-.8V1.61l-4 .8v11.98l4-.8z"
+                      clip-rule="evenodd" />
+                  </svg></span></a>
+            </li>
+          </ul>
         </div>
-      </nav>
-    </header>
-      
-    <!-- Begin page content -->
-    <main role="main" class="container">
+      </div>
+    </nav>
+  </header>
+
+  <!-- Begin page content -->
+  <main role="main" class="container">
     {% block content %}{% endblock %}
 
     {% block flash %}{% endblock %}
-    </main>
+  </main>
 
-    <footer class="footer">
-      <br>
-      <div class="container d-flex">
-        <small class="mr-auto p-2 text-muted">&copy; 2020 Rafael Daniel Schlatter. Licensed under the terms of the <a href="https://github.com/rafaelschlatter/strava-heatmap/blob/master/LICENSE.txt">MIT license.</a></small>
-        <small class="p-2 text-muted"><a href="https://github.com/rafaelschlatter"><i class="fa fa-github fa-lg" style="color:#91979e;" title="GitHub"></i></a></small>
-        <small class="p-2 text-muted"><a href="https://www.strava.com/athletes/24969674"><i class="fab fa-strava fa-lg" style="color:#91979e;" title="Strava"></i></a></small>
-        <small class="p-2 text-muted"><a href="https://www.linkedin.com/in/rafaelschlatter/"><i class="fa fa-linkedin fa-lg" style="color:#91979e;" title="LinkedIn"></i></a></small>
-      </div>
-      <br>
-    </footer>
-    
+  <footer class="footer">
+    <br>
+    <div class="container d-flex">
+      <small class="mr-auto p-2 text-muted">&copy; 2020 Rafael Daniel Schlatter. Licensed under the terms of the <a
+          href="https://github.com/rafaelschlatter/strava-heatmap/blob/master/LICENSE.txt">MIT license.</a></small>
+      <small class="p-2 text-muted"><a href="https://github.com/rafaelschlatter"><i class="fa fa-github fa-lg"
+            style="color:#91979e;" title="GitHub"></i></a></small>
+      <small class="p-2 text-muted"><a href="https://www.strava.com/athletes/24969674"><i class="fab fa-strava fa-lg"
+            style="color:#91979e;" title="Strava"></i></a></small>
+      <small class="p-2 text-muted"><a href="https://www.linkedin.com/in/rafaelschlatter/"><i
+            class="fa fa-linkedin fa-lg" style="color:#91979e;" title="LinkedIn"></i></a></small>
+    </div>
+    <br>
+  </footer>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  </body>
+
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
