--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,36 +4,48 @@
 <div class="jumbotron jumbotron-fluid">
   <fiv class="row">
     <div class="col-6 mx-auto col-md-4 text-center order-md-2">
-      <svg class="bi bi-map" width="6em" height="6em" viewBox="0 0 16 19" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-      <path fill-rule="evenodd" d="M15.817.613A.5.5 0 0116 1v13a.5.5 0 01-.402.49l-5 1a.502.502 0 01-.196 0L5.5 14.51l-4.902.98A.5.5 0 010 15V2a.5.5 0 01.402-.49l5-1a.5.5 0 01.196 0l4.902.98 4.902-.98a.5.5 0 01.415.103zM10 2.41l-4-.8v11.98l4 .8V2.41zm1 11.98l4-.8V1.61l-4 .8v11.98zm-6-.8V1.61l-4 .8v11.98l4-.8z" clip-rule="evenodd"/>
+      <svg class="bi bi-map" width="6em" height="6em" viewBox="0 0 16 19" fill="currentColor"
+        xmlns="http://www.w3.org/2000/svg">
+        <path fill-rule="evenodd"
+          d="M15.817.613A.5.5 0 0116 1v13a.5.5 0 01-.402.49l-5 1a.502.502 0 01-.196 0L5.5 14.51l-4.902.98A.5.5 0 010 15V2a.5.5 0 01.402-.49l5-1a.5.5 0 01.196 0l4.902.98 4.902-.98a.5.5 0 01.415.103zM10 2.41l-4-.8v11.98l4 .8V2.41zm1 11.98l4-.8V1.61l-4 .8v11.98zm-6-.8V1.61l-4 .8v11.98l4-.8z"
+          clip-rule="evenodd" />
       </svg>
     </div>
 
     <div class="col-md-8 order-md-1 text-center text-md-left pr-md-5">
       <h1 style="font-size:45px" class="cover-heading mb-3">A personal activity heatmap</h1>
-      <p style="font-size:20px" class="lead mb-4">Hi, my name is Rafael and I do some sports as a hobby. Mostly &#127939 and &#128692 in summer, and &#127938 in winter.</p>
+      <p style="font-size:20px" class="lead mb-4">Hi, my name is Rafael and I do some sports as a hobby. Mostly &#127939
+        and &#128692 in summer, and &#127938 in winter.</p>
       <hr class="my-hr">
-      <p style="font-size:20px" class="text-muted">I use this small website to host my <span style="color: #fff">personal activity heatmap</span>, based on my Strava data. 
-        I like to code, so naturally I prefer to make this myself rather than paying for <span style="color: #fff">Strava's premium feature</span> &#128513
+      <p style="font-size:18px" class="text-muted">I use this small website to host my <span
+          style="color: #fff">personal activity heatmap</span>, based on my <span style="color: #fff">Strava
+          data</span>.
+        The map is updated once a day at midnight, which is more than enough for a hobby athlete like me &#128512
       </p>
       <br>
       <p>
         <a href="{{ url_for('heatmap.heatmap') }}" class="btn btn-primary">View map</a>
-        <a href="https://github.com/rafaelschlatter/strava-heatmap" class="btn btn-outline-light"><span class="fa fa-github"></span> View on GitHub</a>
+        <a href="https://github.com/rafaelschlatter/strava-heatmap" class="btn btn-outline-light"><span
+            class="fa fa-github"></span> View on GitHub</a>
       </p>
     </div>
-  </div>
+</div>
 </div>
 
 <div class="row, text-center">
   <div>
-    <img class="rounded-circle" src="https://stravastatic.blob.core.windows.net/static/close-up.PNG" alt="Generic placeholder image" width="135" height="135" style="border:10px solid white">
+    <img class="rounded-circle" src="https://stravastatic.blob.core.windows.net/static/close-up.PNG"
+      alt="Generic placeholder image" width="135" height="135" style="border:10px solid white">
     <h5>Want to create your own heatmap?</h5>
-    <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-    <p><a class="btn btn-outline-primary" href="#" role="button">View tutorial <span><svg class="bi bi-arrow-right" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-      <path fill-rule="evenodd" d="M10.146 4.646a.5.5 0 01.708 0l3 3a.5.5 0 010 .708l-3 3a.5.5 0 01-.708-.708L12.793 8l-2.647-2.646a.5.5 0 010-.708z" clip-rule="evenodd"/>
-      <path fill-rule="evenodd" d="M2 8a.5.5 0 01.5-.5H13a.5.5 0 010 1H2.5A.5.5 0 012 8z" clip-rule="evenodd"/>
-    </svg></span></a></p>
+    <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut
+      id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+    <p><a class="btn btn-outline-primary" href="#" role="button">View tutorial <span><svg class="bi bi-arrow-right"
+            width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd"
+              d="M10.146 4.646a.5.5 0 01.708 0l3 3a.5.5 0 010 .708l-3 3a.5.5 0 01-.708-.708L12.793 8l-2.647-2.646a.5.5 0 010-.708z"
+              clip-rule="evenodd" />
+            <path fill-rule="evenodd" d="M2 8a.5.5 0 01.5-.5H13a.5.5 0 010 1H2.5A.5.5 0 012 8z" clip-rule="evenodd" />
+          </svg></span></a></p>
   </div><!-- /.col-lg-4 -->
 </div><!-- /.row -->
 
@@ -41,15 +53,22 @@
 
 <div class="card shadow-sm">
   <div class="card-body">
-    <h6 class="card-subtitle mb-2 text-muted"><svg class="bi bi-question-circle-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-      <path fill-rule="evenodd" d="M16 8A8 8 0 110 8a8 8 0 0116 0zM6.57 6.033H5.25C5.22 4.147 6.68 3.5 8.006 3.5c1.397 0 2.673.73 2.673 2.24 0 1.08-.635 1.594-1.244 2.057-.737.559-1.01.768-1.01 1.486v.355H7.117l-.007-.463c-.038-.927.495-1.498 1.168-1.987.59-.444.965-.736.965-1.371 0-.825-.628-1.168-1.314-1.168-.901 0-1.358.603-1.358 1.384zm1.251 6.443c-.584 0-1.009-.394-1.009-.927 0-.552.425-.94 1.01-.94.609 0 1.028.388 1.028.94 0 .533-.42.927-1.029.927z" clip-rule="evenodd"/>
-    </svg></h6>
+    <h6 class="card-subtitle mb-2 text-muted"><svg class="bi bi-question-circle-fill" width="1em" height="1em"
+        viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+        <path fill-rule="evenodd"
+          d="M16 8A8 8 0 110 8a8 8 0 0116 0zM6.57 6.033H5.25C5.22 4.147 6.68 3.5 8.006 3.5c1.397 0 2.673.73 2.673 2.24 0 1.08-.635 1.594-1.244 2.057-.737.559-1.01.768-1.01 1.486v.355H7.117l-.007-.463c-.038-.927.495-1.498 1.168-1.987.59-.444.965-.736.965-1.371 0-.825-.628-1.168-1.314-1.168-.901 0-1.358.603-1.358 1.384zm1.251 6.443c-.584 0-1.009-.394-1.009-.927 0-.552.425-.94 1.01-.94.609 0 1.028.388 1.028.94 0 .533-.42.927-1.029.927z"
+          clip-rule="evenodd" />
+      </svg></h6>
     <h5 class="card-title">Want to get in touch?</h5>
     <p class="card-text">Feel free to ask a question, leave a comment, feedback or critic.</p>
-    <a href="{{ url_for('contact.contact') }}" class="btn btn-outline-primary">Contact me <span><svg class="bi bi-arrow-right" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-      <path fill-rule="evenodd" d="M10.146 4.646a.5.5 0 01.708 0l3 3a.5.5 0 010 .708l-3 3a.5.5 0 01-.708-.708L12.793 8l-2.647-2.646a.5.5 0 010-.708z" clip-rule="evenodd"/>
-      <path fill-rule="evenodd" d="M2 8a.5.5 0 01.5-.5H13a.5.5 0 010 1H2.5A.5.5 0 012 8z" clip-rule="evenodd"/>
-    </svg></span></a>
+    <a href="{{ url_for('contact.contact') }}" class="btn btn-outline-primary">Contact me <span><svg
+          class="bi bi-arrow-right" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor"
+          xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd"
+            d="M10.146 4.646a.5.5 0 01.708 0l3 3a.5.5 0 010 .708l-3 3a.5.5 0 01-.708-.708L12.793 8l-2.647-2.646a.5.5 0 010-.708z"
+            clip-rule="evenodd" />
+          <path fill-rule="evenodd" d="M2 8a.5.5 0 01.5-.5H13a.5.5 0 010 1H2.5A.5.5 0 012 8z" clip-rule="evenodd" />
+        </svg></span></a>
   </div>
 </div>
 
