Update readme + code style.

--- a/app/static/styles/custom.css
+++ b/app/static/styles/custom.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   height: 100%;
   overflow-x: hidden;
 }
@@ -13,7 +14,7 @@ body {
 }
 
 .masthead {
-  background-color:#24292e;
+  background-color: #24292e;
 }
 
 .jumbotron {
@@ -27,10 +28,10 @@ body {
   margin-right: -150rem;
   padding-right: 150rem;
   color: #fff;
-  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
+  text-shadow: 0 0.05rem .1rem rgba(0, 0, 0, 0.5);
 }
 
-footer{
+footer {
   margin-top: auto;
   background-color: #f6f8fa;
 
@@ -38,8 +39,8 @@ footer{
 
 hr {
   height: 1px;
-  color: #000000;
-  background-color: #000000;
+  color: #000;
+  background-color: #000;
   border: none;
 }
 
